--- a/src/app/hero-detail/hero-detail.component.html
+++ b/src/app/hero-detail/hero-detail.component.html
@@ -1,11 +1,36 @@
 <div *ngIf="hero">
   <h2>{{hero.name | uppercase}} Details</h2>
-  <div><span>id: </span>{{hero.id}}</div>
   <div>
     <label>name:
       <input [(ngModel)]="hero.name" placeholder="name" />
     </label>
   </div>
-  <button (click)="goBack()">go back</button>
-  <button (click)="save()">save</button>
+  <div><span>Golds: </span>{{hero.statistics}}</div>
+  <div><span>HP: </span>{{hero.HP}}</div>
+  <div><span>MP: </span>{{hero.MP}}</div>
+  <div><span>Age: </span>{{hero.age}}</div>
+  <div><span>Class: </span>{{hero.class}}</div>
+  <div>
+    <h2>Implements</h2>
+    <table class="implements">
+      <tr class="implements-head">
+        <td>Head</td>
+        <td>Body</td>
+        <td>Hand</td>
+        <td>Hands</td>
+        <td>Legs</td>
+        <td>Boots</td>
+      </tr>
+      <tr class="implements-body">
+        <td><img [src]="hero.head.img" [alt]="hero.head.item_class" width="100px" height="100px"></td>
+        <td><img [src]="hero.body.img" width="100px" height="100px"></td>
+        <td><img [src]="hero.weapon.img" width="100px" height="100px"></td>
+        <td><img [src]="hero.hands.img" width="100px" height="100px"></td>
+        <td><img [src]="hero.legs.img" width="100px" height="100px"></td>
+        <td><img [src]="hero.boots.img" width="100px" height="100px"></td>
+      </tr>
+    </table>
+  </div>
+  <button (click)="goBack()">Go back</button>
+  <button (click)="save()">Save</button>
 </div>
