/back + mongo + front

--- a/client/src/app/hero-detail/hero-detail.component.html
+++ b/client/src/app/hero-detail/hero-detail.component.html
@@ -5,7 +5,7 @@
       <input [(ngModel)]="hero.name" placeholder="name" />
     </label>
   </div>
-  <div><span>Golds: </span>{{hero.statistics}}</div>
+  <!--<div><span>Golds: </span>{{hero.statistics}}</div>
   <div><span>HP: </span>{{hero.HP}}</div>
   <div><span>MP: </span>{{hero.MP}}</div>
   <div><span>Age: </span>{{hero.age}}</div>
@@ -30,7 +30,7 @@
         <td><img [src]="hero.boots.img" width="100px" height="100px"></td>
       </tr>
     </table>
-  </div>
+  </div>-->
   <button (click)="goBack()">Go back</button>
   <button (click)="save()">Save</button>
 </div>
