--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -4,6 +4,7 @@
      routerLink="/detail/{{hero.id}}">
     <div class="module hero">
       <h4>{{hero.name}}</h4>
+      <h5>{{hero.age}}</h5>
     </div>
   </a>
 </div>
