--- a/client/src/app/dashboard/dashboard.component.html
+++ b/client/src/app/dashboard/dashboard.component.html
@@ -1,8 +1,9 @@
 <h3>Top Heroes</h3>
 <div class="grid grid-pad">
   <a *ngFor="let hero of heroes" class="col-1-4"
-     routerLink="/detail/{{hero.id}}">
+     routerLink="/detail/{{hero._id}}">
     <div class="module hero">
+      <h5>{{hero._id}}</h5>
       <h4>{{hero.name}}</h4>
       <h5>{{hero.age}}</h5>
     </div>
